# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-10-17 10:23:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-15

    Summary:
      handlers, remove link to "stl"
    Revision:
      itools--main--0.11--patch-15


    modified files:
     Changelog handlers/Folder.py


2005-10-15 18:41:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-14

    Summary:
      use "HTTP_X_FORWARDED_HOST" (no more "REAL_HOST")
    Revision:
      itools--main--0.11--patch-14


    modified files:
     Changelog web/zope2.py


2005-10-13 14:57:15 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-13

    Summary:
      xhtml, cosmetic change in "get_skeleton"
    Revision:
      itools--main--0.11--patch-13


    modified files:
     Changelog xhtml/XHTML.py


2005-10-13 13:25:11 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-12

    Summary:
      xhtml, now "set_template_prefix" is a function, instead of a method
    Revision:
      itools--main--0.11--patch-12


    modified files:
     Changelog xhtml/XHTML.py


2005-10-13 13:13:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-11

    Summary:
      xhtml, add "set_template_prefix" (code comes from ikaaro)
    Revision:
      itools--main--0.11--patch-11


    modified files:
     Changelog xhtml/XHTML.py


2005-10-07 18:27:52 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-10

    Summary:
      documentation, updating STL chapter
    Revision:
      itools--main--0.11--patch-10


    new files:
     doc/.arch-ids/stl.dia.id doc/stl.dia

    modified files:
     Changelog doc/Makefile doc/stl.tex


2005-10-05 11:08:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-9

    Summary:
      merge new setup from herve (#105)
    Revision:
      itools--main--0.11--patch-9

    Patches applied:
    
     * herve@oursours.net--public/itools--setup--0.11--base-0
       tag of jdavid@itaapy.com--public/itools--main--0.11--patch-2
    